package com.neopragma.cobolcheck.exceptions;

public class ComponentMockedTwiceInSameScopeException extends RuntimeException{
    public ComponentMockedTwiceInSameScopeException(String message) {
        super(message);
    }
}
