package org.openmainframeproject.cobolcheck.exceptions;

public class CobolSourceCouldNotBeReadException extends RuntimeException {
    public CobolSourceCouldNotBeReadException(Throwable cause) {
        super(cause);
    }
}
