package org.openmainframeproject.cobolcheck.exceptions;

public class CommandLineArgumentException extends RuntimeException {
    public CommandLineArgumentException(String message) {
        super(message);
    }
}
