package org.openmainframeproject.cobolcheck.exceptions;

public class CopybookCouldNotBeExpanded extends RuntimeException {
    public CopybookCouldNotBeExpanded(Throwable cause) {
        super(cause);
    }
}
