package org.openmainframeproject.cobolcheck.exceptions;

public class EmptyTestSuiteException extends RuntimeException {
    public EmptyTestSuiteException(String message) {
        super(message);
    }
}
