package org.openmainframeproject.cobolcheck.exceptions;

public class TestSuiteCouldNotBeReadException extends RuntimeException {
    public TestSuiteCouldNotBeReadException(Throwable cause) {
        super(cause);
    }
}
