package org.openmainframeproject.cobolcheck.exceptions;

public class TestSuiteSyntaxException extends RuntimeException {
    public TestSuiteSyntaxException(String message) {
        super(message);
    }
}
