package org.openmainframeproject.cobolcheck.exceptions;

public class UndefinedKeywordException extends RuntimeException {
    public UndefinedKeywordException(String message) {
        super(message);
    }
}
