package org.openmainframeproject.cobolcheck.exceptions;

public class VerifyReferencesNonexistentMockException extends TestSuiteSyntaxException {
    public VerifyReferencesNonexistentMockException(String message) {
        super(message);
    }
}
